# meta-web-three

./: .babelrc  .env.example  .gitattributes  .gitignore  ADMIN_AUTH.md  CHECK_LIST.md  CONTRACT_COUPON_SPEC.md  DEVELOPMENT.md  DOMAIN_BOUNDARY.md  Makefile  README.md  REQUIREMENT_V3.md  TODO.md  TODO_ERP.md  TODO_FACTORY_PLAN.md  TODO_MES_SPEC.md  TestConfig.jmx  allow-ports-firework.sh  app.html  cache.appchache  clean-docker-volume.sh  collect-schemas.sh  docker-compose-elasticsearch-init.sh  docker-compose.ai.yml  docker-compose.dataenv.yml  docker-compose.digital-twin.yml  docker-compose.env.yml  docker-compose.graph.base.yml  docker-compose.server.yml  docker-compose.yml  fasion.ahk  graph-node-config.toml  gulpfile.js  gulpfile.shopbest.js  hardhat.config.js  import_excel.sh  init_db.sh  meta-web-three_evolution_20260603_1929.md  nuxt.config.js  package-lock.json  (+13 more)
AppSdk/: .gitignore  README.md  package.json  tsconfig.json
ai/: CNN.py  LinearRegressionModel.py  RiskScoreModel.py  TransformerInTorch.py  WeatherModel.py  environment.yml  gan.py  main.py  nlp_api.py  requirements.txt  risk_score_model.py  test_device.py  train.py  utils.py
app/: .gitignore  App.tsx  README.md  app.json  eas.json  metro.config.js  package.json  react-native.config.js  tsconfig.json
app-sdk/: app.json  package.json  react-native.config.js  tsconfig.json
apps/digital-twin/system-support/: Cargo.toml  PLAN.md
apps/digital-twin/system-support/src/: audio.rs  lib.rs  media.rs  monitor.rs  tts.rs
apps/digital-twin/system-support/src/api/: dto.rs  mod.rs
apps/digital-twin/system-support/src/domain/: capture.rs  encoding.rs  error.rs  mod.rs  transport.rs
appsdk/: package.json
assets/: variables.sass
backend-api/: dockerfile  pom.xml
backstage-admin/: .env.development  .env.example  README.md  env.d.ts  package.json
bff/: Cargo.toml
bff/src/: main.rs  utils.rs
bff/tg_bot/: Cargo.toml
bff/tg_bot/src/: lib.rs
block-chain/: Cargo.toml  README.md
block-chain-use/: .env.environmenet  .eslintrc.js  .gitignore  dockerfile  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
block-chain/bots/tg-bot/: Cargo.toml
block-chain/bots/tg-bot/src/: lib.rs
block-chain/config/: config.json
block-chain/src/: async_task.rs  block.rs  gui.rs  hashable.rs  lib.rs  main.rs  matcher.rs  order_match.rs  public.json  single_linked_list.rs  transaction.rs  utils.rs
block-chain/src/gui/: mod.rs  state.rs  theme.rs
block-chain/src/gui/components/: mod.rs  network.rs  peer.rs  status.rs
block-chain/src/gui/views/: dashboard.rs  details.rs  explorer.rs  mod.rs
block-chain/src/order_match/: interfaces.rs  order_match.rs  order_shard.rs  utils.rs
block-chain/src/utils/: mod.rs  single_linked_list.rs  utils.rs
block-chain/tests/: blockchain_tests.rs
block-chain/tg_bot/: Cargo.toml
block-chain/tg_bot/src/: lib.rs
chain/: hardhat.config.js  package.json
client/: .env  .env.example  .gitignore  README.md  TODO.md  dockerfile  farm.config.ts  index.html  jest.config.js  jest.setupAfterEnv.js  package-lock.json  package.json  pnpm-lock.yaml  react-native.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
config/: app.js  config.js  express.js  mongoose.js
contracts/: Greeter.sol  importMethod.sol
data/: user_session.json
desktop/: package-lock.json  package.json
docs/: api-signature-guide.md
e2e/: scene.spec.ts
evm-contract/: .gitignore  README.md  foundry.toml  package.json
farm-plugin-wasm-web/: Cargo.toml
gateway/: dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
k8s/: MAPPING.md  QUICKSTART.md  README.md  deploy-all.yaml  deploy.sh  namespace.yaml
layouts/: default.vue  error.vue
local-llm-provider/: README.md  main.py  model_provider.py
milvus-config/: milvus.yaml
model-train/: README.md  WeatherModel.py  environment.yml
mongodbShell/: goodsFakeData.js
notes/: FrontTest-BaseLearn.md  Webassembly-Learn.md  aboutDocker.md  css-responsive-design.md  index.html  keycaps.md  package-lock.json  package.json  redis.md  sql.md  typescript.md  typescript.ts  vite.config.ts  watch-video.md  webpack.config.md
order-match/: .env.example  .gitignore  Cargo.toml  Cargo.toml.orig  build.rs  com.metawebthree.common.generated.rpc.rs  config.toml
order-match/src/: config.rs  main.rs
order-match/src/ai_quant/: client.rs
order-match/src/order_match/: interfaces.rs  mod.rs  order_book.rs  order_match.rs  order_shard.rs  structs.rs
order-match/src/trade_gateway/: mod.rs
pages/: index.vue
pratical/: fasion.ahk  getLocalIp.js  typescript.ts
protos/: CommissionService.proto  DeviceRiskTag.proto  OrderMatchService.proto  OrderService.proto  RiskScorerService.proto  UserRiskProfileService.proto  UserService.proto
risk-scorer/: .env.example  .gitignore  Logger.py  RiskScoreModel.py  env_loader.py  environment.yml  grpcClient.py  main.py  requiredment.txt  testGrpcService.py
rocketmq/: broker.conf
scripts/: check-domain-boundary.sh  generate-docker-compose-server.sh  server-services-registry.sh  supplier_performance.sql  system.ts
server/: .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.server.yaml  go.mod  init_db.sh  nest-cli.json  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  run-all.sh  run-env.sh
software/: .gitignore  makefile  readme.md
solana-contract/: Anchor.toml  Cargo.toml  package.json
solana-contract/programs/solana-contract/: Cargo.toml
solana-contract/programs/solana-contract/src/: context.rs  lib.rs  seeds.rs
src/: app.controller.ts  app.module.ts  main.ts
system-management/: index.html  vite.config.ts
system-support/: makefile
test/: simple-test.js
tools/: check_real_time_block.sql  getLocalIp.js  (+4 more)
wasm-ff/: Cargo.toml  README.md
wasm-ff/circom/: signature.circom
wasm-ff/src/: bitcoin_utils.rs  excel.rs  history.rs  lib.rs  oauth_utils.rs  tetris.rs
wasm-ff/src/btc/: rune.rs
wasm-ff/src/service/: bitcoin_service.rs  chain_service.rs  mod.rs  token_service.rs
wasm-ff/src/utils/: crypto_utils.rs
(+4944 files in other folders)
