[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tg_bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde_json = "1.0"
tg_bot = { path = "tg_bot" }
