[package]
name = "block-chain"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "tg_bot",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.1"
crypto-hash = "0.3.2"
tokio = { version = "1.29.1", features = ["full"] }
hyper = "^1.0.0-rc.3"
#axum = "0.6.18"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tg_bot = { path = "tg_bot" }