[package]
name = "block-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
crypto-hash = "0.3"
tokio = { version = "1.38", features = ["full"] }
hyper = "^1.0.0-rc.3"
#axum = "0.6.18"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"