[package]
name = "order-match"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dubbo = "0.4"
dubbo-config = "0.3"
ordered-float = "5.0"
slab = "0.4"
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
rdkafka = { version = "0.29", features = ["cmake-build"] }
rocksdb = "0.20"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
fxhash = "0.2"
config = "0.14"
dotenvy = "0.15"
# for proto
tonic = "0.14.1"
prost = "0.14.1"

[build-dependencies]
tonic-prost-build = "0.14.1"
tonic-build = "0.12"
prost-build = "0.12"