[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {  version = "0.12", features = ["full", "macros", "ctrlc_handler"] }
tokio = { version = "1.38", features = ["full"] }
log = "0.4.21"
dotenv = "0.15"
reqwest = "0.11"