[package]
name = "system-support"
version = "0.1.0"
edition = "2021"

[lib]
name = "index"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "napi4"] }
napi-derive = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[build-dependencies]
napi-build = "2.0"
