[package]
name = "system-support"
version = "0.2.0"
edition = "2021"

[lib]
name = "index"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "napi4", "serde-json"] }
napi-derive = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }
nokhwa-core = "0.1"
cpal = "0.15"
once_cell = "1.20"

[build-dependencies]
napi-build = "2.0"
