[package]
name = "solana-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
spl-token = {version="8.0.0", features = ["no-entrypoint"]}
